# shifu

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: main.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  write.rs
crates/maven/: Cargo.toml
crates/maven/src/: domain.rs  init.rs  lib.rs  template.rs
crates/maven/templates/: main.java
crates/maven/templates/java/: main.askama
crates/maven/templates/xml/: pom.askama
